chore: updated README.md